baml_language/crates/baml_tests/snapshots/compiles/method_explicit_type_args/baml_tests__compiles__method_explicit_type_args__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 20062
---
=== PPIR ===
class user.Foo {
  tag: string
}
class user.Foo$stream {
  tag: string | null
}
function user.use_method_type_args() -> int  [expr] {
  { let f = user.Foo { tag: "x" }; let v: int = f.zero() NullCoalesce 5 } v
}
function user.zero(self: ?) -> T?  [expr] {
  {  } null
}
