baml_language/crates/baml_tests/snapshots/compiles/method_explicit_type_args/baml_tests__compiles__method_explicit_type_args__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.Foo.from_json(j: baml.json.json) -> Foo {
    // Locals:
    let _0: Foo // _0 // return
    let _1: baml.json.json // j // param
    let _2: type

    bb0: {
        _2 = load_type(Foo);
        _0 = call const fn baml.json.to<copy _2>(copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}

fn user.use_method_type_args() -> int {
    // Locals:
    let _0: int // _0 // return
    let _1: Foo // f
    let _2: int // v
    let _3: int | null
    let _4: type
    let _5: bool

    bb0: {
        _1 = user.Foo { const "x" };
        _4 = load_type(int);
        _3 = call const fn user.Foo.zero<copy _4>(copy _1) -> [bb1];
    }

    bb1: {
        _2 = copy _3;
        _5 = copy _3 == const null;
        branch copy _5 -> [bb2, bb3];
    }

    bb2: {
        _2 = const 5_i64;
        goto -> bb3;
    }

    bb3: {
        _0 = copy _2;
        goto -> bb4;
    }

    bb4: {
        return;
    }
}

fn user.Foo.zero(self: Foo) -> T | null {
    // Locals:
    let _0: T | null // _0 // return
    let _1: Foo // self // param

    bb0: {
        _0 = const null;
        goto -> bb1;
    }

    bb1: {
        return;
    }
}
