baml_language/crates/baml_tests/snapshots/compiles/method_explicit_type_args/baml_tests__compiles__method_explicit_type_args__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
class user.Foo {
  tag: string
}
function user.Foo.zero<T>(self: user.Foo) -> T | null throws never {
  { : null
    null : null
  }
}
function user.Foo.to_json(self: user.Foo) -> baml.json.json throws baml.json.JsonSerializationError | baml.json.JsonParseError {
  map { "tag": self.tag.to_json() } : map<string, baml.json.json>
}
function user.Foo.from_json(j: baml.json.json) -> user.Foo throws baml.json.JsonParseError | baml.json.JsonDecodeError {
  Foo { tag: baml.json.from_json<string>(baml.json.field(j, "tag")) } : user.Foo
}
function user.use_method_type_args() -> int throws never {
  { : int
    let f = Foo { tag: "x" } : user.Foo
    let v: int = f.zero<int>() ?? 5 : int
    v : int
  }
}
class user.Foo$stream {
  tag: string | null
}
