baml_language/crates/baml_tests/snapshots/compiles/method_explicit_type_args/baml_tests__compiles__method_explicit_type_args__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.Foo.from_json(j: baml.json.json) -> Foo {
    load_var j
    load_const "tag"
    call baml.json.field
    store_var _3
    load_type string
    load_var _3
    call baml.json.from_json
    init_instance user.Foo .tag
    return
}

function user.Foo.to_json(self: Foo) -> baml.json.json {
    load_type string
    load_var self
    load_field .tag
    call baml.json.to_json
    load_const "tag"
    alloc_map 1
    return
}

function user.Foo.to_string(self: Foo) -> string {
    load_type Foo
    load_var self
    call baml.unstable.string
    return
}

function user.Foo.zero(self: Foo) -> T | null {
    load_const null
    return
}

function user.use_method_type_args() -> int {
    load_type int
    load_const "x"
    init_instance user.Foo .tag
    call user.Foo.zero
    store_var _3
    load_var _3
    store_var v
    load_var _3
    load_const null
    cmp_op ==
    pop_jump_if_false L0
    load_const 5
    store_var v

  L0:
    load_var v
    return
}
